--- a/package.json
+++ b/package.json
@@ -3,25 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "concurrently \"npm run res:start\" \"npm run next:dev\"",
+    "build": "rescript && next build",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start",
+    "next:lint": "next lint",
+    "res:build": "rescript",
+    "res:clean": "rescript clean",
+    "res:start": "rescript build -w"
   },
   "dependencies": {
+    "@glennsl/rescript-fetch": "^0.2.0",
+    "@greenlabs/ppx-rhf": "^0.0.1",
+    "@rescript/core": "^0.6.0",
+    "@rescript/react": "rescript-lang/rescript-react",
+    "concurrently": "^8.2.2",
+    "firebase": "^10.6.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-hook-form": "^7.49.2",
+    "rescript": "^11.0.0-rc.8",
+    "rescript-classnames": "^6.0.0",
+    "rescript-schema": "^6.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "rescript-next": "^12.0.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
