--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ NEXT_PUBLIC_STORAGE_BUCKET=
 NEXT_PUBLIC_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_APP_ID=
 NEXT_PUBLIC_MEASUREMENT_ID=
+
+NEXT_PUBLIC_FARO_URL=
