Skip inactive players in leaderboard

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@sentry/nextjs": "^7.93.0",
     "concurrently": "^8.2.2",
     "firebase": "^10.6.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
+    "posthog-js": "^1.139.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
