--- a/package.json
+++ b/package.json
@@ -13,32 +13,35 @@
     "res:build": "rescript",
     "res:clean": "rescript clean",
     "res:start": "rescript build -w",
-    "rescript": "rescript"
+    "rescript": "rescript",
+    "firebase": "firebase"
   },
   "dependencies": {
-    "@glennsl/rescript-fetch": "^0.2.0",
-    "@greenlabs/ppx-rhf": "^0.0.1",
-    "@rescript/core": "^0.6.0",
+    "@glennsl/rescript-fetch": "^0.2.3",
+    "@greenlabs/ppx-rhf": "^0.0.7",
+    "@rescript/core": "^1.6.1",
     "@rescript/react": "rescript-lang/rescript-react",
-    "@sentry/nextjs": "^7.93.0",
+    "@sentry/nextjs": "^8.47.0",
     "concurrently": "^8.2.2",
-    "firebase": "^10.6.0",
-    "next": "^14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "rescript": "^11.0.0-rc.8",
-    "rescript-classnames": "^6.0.0",
-    "rescript-schema": "^6.3.0"
+    "firebase": "^11.1.0",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "rescript": "^11.1.4",
+    "rescript-classnames": "^7.0.1",
+    "rescript-schema": "^8.0.0",
+    "rescript-schema-ppx": "^8.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "firebase-tools": "^13.20.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
